--- a/.github/workflows/source.yml
+++ b/.github/workflows/source.yml
@@ -11,7 +11,8 @@ on:
     branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  repository_dispatch:
+    types: [ "event-triggered-by-jira" ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
