--- a/.github/workflows/source.yml
+++ b/.github/workflows/source.yml
@@ -4,20 +4,14 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
   repository_dispatch:
-    types: [ "event-triggered-by-jira" ]
+    event types: [ "event-triggered-by-jira" ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  run-github-actions:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
