--- a/.github/workflows/source.yml
+++ b/.github/workflows/source.yml
@@ -1,25 +1,16 @@
-# This is a basic workflow to help you get started with Actions
-
 name: repository_dispatch working
-
-# Controls when the workflow will run
 on:
   repository_dispatch:
-    event types: [ "event-triggered-by-jira" ]
+    event-type : [event-triggered-by-jira]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   run-github-actions:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Simple Java Script Action
+        id: greet #assigning an ID to this step
+        uses: actions/hello-world-javascript-action@v1 #This action prints "Hello World" or "Hello" + the name of a person to greet to the log. Refer to https://github.com/actions/hello-world-javascript-action
+        with:
+          who-to-greet: Vishal #Input:Required The name of the person to greet. Default "World
 
-      # Runs a single command using the runners shell
-      - name: Run python script
-        run: python .github/workflows/example.py
     
