--- a/.github/workflows/source.yml
+++ b/.github/workflows/source.yml
@@ -11,6 +11,8 @@ jobs:
         id: greet #assigning an ID to this step
         uses: actions/hello-world-javascript-action@v1 #This action prints "Hello World" or "Hello" + the name of a person to greet to the log. Refer to https://github.com/actions/hello-world-javascript-action
         with:
-          who-to-greet: Vishal #Input:Required The name of the person to greet. Default "World
+          who-to-greet: Naveen #Input:Required The name of the person to greet. Default "World
+      - name: log greeting time
+        run: echo "${{steps.greet.outputs.time}}"
 
     
